tests/files/lexer_tests/should_fail/066.cmdr
// Unterminated command, need a semicolon
git clone "myURL"